# New-printshop

./: .env  .env.template  .replit  APACHE_DEPLOYMENT.md  DATABASE_UPGRADE_GUIDE.md  DEPLOYMENT.md  EXPORT_OPTIONS.md  INSTALLATION.md  NEXTCLOUD_TROUBLESHOOTING.md  ONE_STEP_UPGRADE_GUIDE.md  README.md  RELEASE_NOTES.md  RELEASE_NOTES_V5.0.1.md  RELEASE_NOTES_V5.0.3.md  RELEASE_NOTES_V5.0.4.md  RELEASE_NOTES_V5.0.6.md  SETUP_GUIDE.md  VERSION_5_README.md  add_default_materials.py  add_finishing_options.py  add_order_item_material_table.py  add_pickup_columns.sql  add_postgres_pickup_columns.py  add_quote_item_material_table.py  add_quote_item_nup_column.py  add_roll_paper_columns.py  add_roll_paper_complete.py  add_sqft_pricing_columns.py  add_sqft_pricing_complete.py  app.py  apply_postgresql_fix.py  calculator_fix.js  check_postgresql_database.py  comprehensive_import_template.xlsx  create_admin_user.py  create_complete_export.py  create_roll_fields.sh  create_simple_v5_package.py  create_v501_package.py  create_v501_simple_package.py  (+89 more)
instance/: printshop.db
static/css/: print_preview.css  style.css  tracking.css
static/js/: barcode_scanner.js  create_beep.js  drag_drop_upload.js  file_preview.js  finishing_options_loader.js  main.js  material_handler.js  order_form.js  paper_filter.js  print_calculator.js  print_preview.js  quote_form.js  quote_item_calculator.js  quote_item_display.js  saved_prices.js  simple_quote_calculator.js  simple_signature.js
templates/: api_test.html  dashboard.html  layout.html  login.html  macros.html
templates/customers/: create.html  (+2 more)
(+52 files in other folders)
